--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     url: jdbc:h2:mem:test
     username: sa
     password:
-    driver-class-name:  org.h2.Driver
+    driver-class-name: org.h2.Driver
   jpa:
-    show-sql: true
+    show-sql: false
