--- a/aspect-starter/pom.xml
+++ b/aspect-starter/pom.xml
@@ -9,12 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api-service</artifactId>
+    <groupId>ru.ru.gb</groupId>
+    <artifactId>aspect-starter</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
-
 </project>
