--- a/book-service/pom.xml
+++ b/book-service/pom.xml
@@ -18,10 +18,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
@@ -36,6 +32,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>3.2.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.ru.gb</groupId>
+            <artifactId>aspect-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
